fix : edit in body overflow

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -8,7 +8,6 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
     height: 100%;
-    overflow: hidden;
     height: 100%;
 }
 
@@ -19,12 +18,9 @@ body {
   background: #2e2f41 url(../images/background/5.jpg) 0 0 no-repeat;
   background-size: cover;
   background-attachment:fixed;
-  overflow: hidden;
+  overflow: auto;
   -webkit-overflow-scrolling:touch;
     
-}
-header{
-    overflow-y: scroll;
 }
 .app-list{
     direction: rtl;
